--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
+    "animate.css": "^3.7.2",
+    "rc-texty": "^0.2.0",
     "react": "^16.12.0",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-animated-slider": "^1.1.4",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "text-typing-animation": "^0.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
